--- a/webapp/src/index.scss
+++ b/webapp/src/index.scss
@@ -11,3 +11,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media screen and (orientation:portrait) {
+  html {
+    background-color: red;
+    transform: rotate(90deg);
+    transform-origin: left top;
+    width: 100vh;
+    height: 100vw;
+    overflow-x: hidden;
+    position: absolute;
+    top: 0vh;
+    left: 100vw;
+  }
+}
