--- a/webapp/src/PageIndex.scss
+++ b/webapp/src/PageIndex.scss
@@ -1,9 +1,32 @@
+@mixin FAControl() {
+  font-size: 50px;
+  cursor: pointer;
+  color: white;
+  font-size: 50px;
+  cursor: pointer;
+
+  &:hover {
+    text-shadow: 3px 3px 3px black;
+    color: blue;
+  }
+
+
+}
+
 .Index {
   &__Video {
     width: 100vw;
     bottom: 0px;
     position: absolute;
     left: 0px;
+    z-index: 1;
+  }
+  &__VideoBg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    filter: grayscale(100%);
   }
   &__Video-Holder {
 
@@ -22,6 +45,33 @@
     margin-right: auto;
     padding-right: 16px;
     padding-top: 16px;
+    z-index: 2;
+  }
+  &__Video-Description {
+    text-align: left;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    top: 0vh;
+    left: 0vw;
+    padding: 32px;
+    color: white;
+    text-shadow: 4px 4px 4px black;
+    font-size: 18px;
+    max-width: 200px;
+    background-color: rgba(0,0,0,0.05);
+    border: 1px solid rgba(0,0,0,0.3);
+    border-bottom-right-radius: 32px;
+    z-index: 2;
+  }
+  &__Video-Skip {
+    @include FAControl();
+  }
+  &__Video-Title {
+    font-size: 24px;
+  }
+  &__Video-Subtitle {
+    font-size: 12px;
   }
   &__Video-Reaction {
     position: relative;
@@ -60,6 +110,7 @@
     width: 100px;
     height: 100px;
     top: 0px;
+    z-index: 2;
   }
   &__Video-Controls {
     position: absolute;
@@ -69,28 +120,19 @@
     height: 100px;
     display: flex;
     flex-direction: row;
+    z-index: 2;
   }
   &__Video-Control {
     flex: 1 1 0px;
-    color: white;
-    font-size: 50px;
     padding: 25px;
-    cursor: pointer;
-
-    &:hover {
-      text-shadow: 3px 3px 3px black;
-      color: blue;
-    }
+    @include FAControl();
+    z-index: 2;
   }
 }
 
 @media screen and (orientation:portrait) {
   .Index {
     &__Video {
-      width: 100vh;
-      top: 0px;
-      position: auto;
-      left: auto;
     }
     &__Video-Holder {
       width: 100vh;
