--- a/webapp/src/PageIndex.scss
+++ b/webapp/src/PageIndex.scss
@@ -128,6 +128,31 @@
     @include FAControl();
     z-index: 2;
   }
+  &__Video-LastImageModal {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+    left: 15vw;
+    top: 15vh;
+    width: 70vw;
+    height: 70vh;
+    z-index: 10000;
+    padding: 16px;
+    background-color: white;
+    box-shadow: 5px 5px 5px black;
+
+    &--Button {
+      flex: 1 1 auto;
+      height: 32px;
+    }
+  }
+  &__Video-LastImage {
+    flex: 1 1 auto;
+    margin-bottom: 8px;
+    width: 100%;
+    max-height: calc(100% - 32px);
+  }
 }
 
 @media screen and (orientation:portrait) {
